--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:api": "esw apps/api/**/*.js --color --fix --watch"
   },
   "dependencies": {
+    "body-parser": "^1.19.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "pg": "^8.7.1",
