--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "body-parser": "^1.19.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "iconoir-react": "^2.1.0",
     "pg": "^8.7.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1"
