--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "body-parser": "^1.19.1",
-    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "install": "^0.13.0",
@@ -23,7 +22,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-loading-icons": "^1.0.8",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "tiny-relative-date": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.5",
